--- a/index.html
+++ b/index.html
@@ -268,5 +268,7 @@
         </p>
       </div>
     </footer>
+
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   </body>
 </html>
