fix accessibilty HTML5 issues

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
         <div class="features__row">
           <div class="features__col">
             <div class="features__icon">
-              <img src="images/icon-access-anywhere.svg" />
+              <img
+                src="images/icon-access-anywhere.svg"
+                alt="access anywhere icon"
+              />
             </div>
             <h2 class="features__title">Access your files, anywhere</h2>
             <p class="features__desc">
@@ -70,7 +73,7 @@
 
           <div class="features__col">
             <div class="features__icon">
-              <img src="images/icon-security.svg" />
+              <img src="images/icon-security.svg" alt="security" />
             </div>
             <h2 class="features__title">Security you can trust</h2>
             <p class="features__desc">
@@ -84,7 +87,10 @@
         <div class="features__row">
           <div class="features__col">
             <div class="features__icon">
-              <img src="images/icon-collaboration.svg" />
+              <img
+                src="images/icon-collaboration.svg"
+                alt="collaboration icon"
+              />
             </div>
             <h2 class="features__title">Real-time collaboration</h2>
             <p class="features__desc">
@@ -94,7 +100,7 @@
           </div>
           <div class="features__col">
             <div class="features__icon">
-              <img src="images/icon-any-file.svg" />
+              <img src="images/icon-any-file.svg" alt="file icon" />
             </div>
             <h2 class="features__title">Store any type of file</h2>
             <p class="features__desc">
@@ -126,7 +132,7 @@
             </p>
             <div class="stay-pro__link">
               <a href="#" class="stay-pro__link--link">See how Fylo works</a>
-              <img src="images/icon-arrow.svg" />
+              <img src="images/icon-arrow.svg" alt="arrow icon/>
             </div>
             <span class="stay-pro__line"></span>
           </div>
@@ -191,7 +197,7 @@
             would be happy to help you.
           </p>
 
-          <form action="" class="get-access__form">
+          <form action="#" class="get-access__form">
             <input
               type="email"
               name="email"
@@ -200,7 +206,7 @@
               autocomplete="off"
             />
             <input
-              type="button"
+              type="submit"
               value="Get Started For Free"
               class="get-access__btn"
             />
@@ -216,7 +222,11 @@
         </div>
         <div class="footer__content">
           <div class="footer__location">
-            <img src="images/icon-location.svg" class="footer__location-icon" />
+            <img
+              src="images/icon-location.svg"
+              class="footer__location-icon"
+              alt="location icon"
+            />
             <p class="footer__desc">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua
@@ -224,12 +234,12 @@
           </div>
           <div class="footer__info">
             <div>
-              <img src="images/icon-phone.svg" alt="phone" />
+              <img src="images/icon-phone.svg" alt="phone icon" />
               <span class="footer__info--phone">+1-543-123-4567</span>
             </div>
 
             <div>
-              <img src="images/icon-email.svg" alt="phone" />
+              <img src="images/icon-email.svg" alt="email icon" />
               <span class="footer__info--email">example@fylo.com</span>
             </div>
           </div>
@@ -250,9 +260,13 @@
           </nav>
 
           <div class="footer__social-link">
-            <a href="#" class="icon"><i class="ion-social-facebook"></i></a>
-            <a href="#" class="icon"><i class="ion-social-twitter"></i></a>
-            <a href="#" class="icon"
+            <a href="https://www.facebook.com/kingsley.mbagwu.75" class="icon"
+              ><i class="ion-social-facebook"></i
+            ></a>
+            <a href="https://www.twitter.com/iamwhitegod" class="icon"
+              ><i class="ion-social-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/iamwhitegod" class="icon"
               ><i class="ion-social-instagram-outline"></i
             ></a>
           </div>
